--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,37 @@
 
 <h1>Books</h1>
 
+<div class="search-books">
+  <div class="row">
+    <%= form_tag root_path,:method=>:get  do %>
+      
+      <div class="col-md-3 col-lg-3 col-sm-6 col-xs-6">
+        <div class="form-group">
+          <p> Title </p>
+          <%= text_field_tag :title,params[:title],:placeholder=>"Title"  %>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-lg-3 col-sm-6 col-xs-6">
+        <div class="form-group">
+          <p> Price</p>
+          <%= text_field_tag :price,params[:price],:placeholder=>"Greater Than"  %>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-lg-3 col-sm-6 col-xs-6">
+        <div class="form-group">
+          <p> Tags </p>
+          <%= text_field_tag :tags,params[:tags],:placeholder=>"Tags"  %>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-lg-3 col-sm-6 col-xs-6">
+        <%= submit_tag 'Search',:class=>"btn btn-info",:style=>"margin-bottom: 30px;"%>
+      </div>
+    <% end %>
+  </div>
+</div>
 <table class="table table-striped">
   <thead>
     <tr>
